fixing cut-off image portion, may need to adjust spacing later

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
     background: #fff;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding: 5px;
     margin-top:3vh;
     overflow: hidden;
@@ -57,7 +57,7 @@ body {
 .image {
     display: flex;
     place-content: center;
-    max-height: 70vh;
+    max-height: 50vh;
     box-shadow: 0px 5px 5px #000, 0px -5px 5px #000;
 }
 
